apps/cxs-services/base/cxs-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxsservices
spec:
  selector:
    matchLabels:
      app: cxsservices
      tier: api
  template:
    metadata:
      labels:
        app: cxsservices
        tier: api
    spec:
      containers:
        - name: node
          image: quicklookup/cxs-services:2b43cd4
          ports:
            - containerPort: 8088
          livenessProbe:
            httpGet:
              port: 8088
              path: /api/status/alive
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 8088
              path: /api/status/ready
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: cxs-service-pvc
