apps/cxs-services/base/add-version-label.yaml
apiVersion: builtin
kind: LabelTransformer
metadata:
  name: add-version-label
labels:
  version: v1
fieldSpecs:
- path: metadata/labels
  create: true
- path: spec/selector/matchLabels
  create: true
  kind: Deployment
- path: spec/template/metadata/labels
  create: true
  kind: Deployment
- path: spec/selector
  create: true
  kind: Service
