apps/cxs-services/base/cxs-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cxsservices
  labels:
    app: cxsservices
    tier: api
  annotations:
    # TODO: Reducing blast radius of installing tailscale operator to staging
    tailscale.com/expose: "false"
spec:
  type: NodePort
  ports:
    - port: 8088
  selector:
    app: cxsservices
    tier: api
